--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Cube en 3D</title>
 </head>
 <body>
+    <nav> 
+        <div id="barre"></div>
+
+          <a href="">Accueil</a>
+          <a href="">Services</a>
+          <a href="">Missions</a>
+          <a href="">Portfolio</a>
+          <a href="">Contact</a>
+             
+      </nav>
 
     <div class="container">
         <div class="cube">
@@ -19,7 +29,7 @@
             <div class="face bottom"></div>
         </div>
     </div>
-
+ <script src="assets/js/nav.js"></script>
     
 </body>
 </html>
